# haskell-book

./: chapter10.hs  chapter11.hs  chapter12.hs  chapter13.hs  chapter14.hs  chapter15.hs  chapter16.hs  chapter17.hs  chapter18.hs  chapter19.hs  chapter2.hs  chapter20.hs  chapter3.hs  chapter4.hs  chapter5.hs  chapter6.hs  chapter7.hs  chapter8.hs  chapter9.hs  test.rb
chapter-fifteen/maybe-another-monoid/: maybe-another-monoid.cabal
chapter-fifteen/maybe-another-monoid/app/: Main.hs
chapter-fifteen/maybe-another-monoid/src/: Lib.hs
chapter-fifteen/monoid-exercises/: monoid-exercises.cabal
chapter-fifteen/monoid-exercises/app/: Main.hs
chapter-fifteen/monoid-exercises/src/: Lib.hs
chapter-fifteen/orphan-instance/: Listy.hi  ListyInstances.hi  ListyInstances.hs
chapter-fifteen/semigroup-exercises/: README.md  semigroup-exercises.cabal
chapter-fifteen/semigroup-exercises/src/: Lib.hs
chapter-fourteen/: Arbitrary.hs
chapter-fourteen/addition/: Addition.hs  addition.cabal
chapter-fourteen/ciphers/: ciphers.cabal
chapter-fourteen/ciphers/src/: Main.hs
chapter-fourteen/hangman/: hangman.cabal
chapter-fourteen/hangman/src/: Main.hs
chapter-fourteen/morse-code/: morse-code.cabal  morse.cabal
chapter-fourteen/morse-code/app/: Main.hs
chapter-fourteen/morse-code/src/: Morse.hs  MorseCode.hs
chapter-fourteen/morse-code/tests/: tests.hs
chapter-fourteen/word_number_test/: WordNumberTest.hs  wordNumberTest.cabal
chapter-seventeen/list-applicative/: ListApplicativeTest.hs  listApplicative.cabal
chapter-seventeen/validation-applicative/: ValidationApplicativeTest.hs  validationApplicative.cabal
chapter-seventeen/zip-list-applicative/: ZipListApplicativeTest.hs  zipListApplicative.cabal
chapter-thirteen/: Cipher.hs  decrypt.hs  encrypt.hs  gimme_person.hs  palindrome.hs
chapter-thirteen-hangman/: chapter-thirteen-hangman.cabal
chapter-thirteen-hangman/src/: Main.hs
chapter-thirteen/hangman/: README.md
