name:                ciphers
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Peter Doherty
maintainer:          pdoherty@protonmail.com
copyright:           2017 Peter Doherty
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable ciphers
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , QuickCheck
