name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
homepage:            https://github.com/githubuser/morse#readme
license-file:        LICENSE
author:              Peter Doherty
maintainer:          pdoherty@protonmail.com
copyright:           2017 Peter Doherty
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules: Morse
  ghc-options: -Wall -fwarn-tabs
  build-depends:  base >=4.7 && <5
                  , containers
                  , QuickCheck
  hs-source-dirs: src
  default-language: Haskell2010

executable morse
  main-is: Main.hs
  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: app
  build-depends:  base >=4.7 && <5
                  , containers
                  , morse
                  , QuickCheck
  default-language: Haskell2010

test-suite tests
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs: tests
  build-depends:  base
                  , containers
                  , morse
                  , QuickCheck
  default-language: Haskell2010
