-- listApplicative.cabal
name: listApplicative
version: 0.1.0.0
license-file: LICENSE
author: Peter Doherty
maintainer: Peter Doherty
category: Text
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules: ListApplicativeTest
  ghc-options: -Wall -fwarn-tabs
  build-depends: base >=4.7 && <5
               , hspec
               , QuickCheck
               , checkers
  hs-source-dirs: .
  default-language: Haskell2010
